# DAW

./: .gitignore  CMakeLists.txt  LiBeDAW_v0.1_Implementation_Roadmap.md.resolved  README.md  check_algs  check_algs.cpp  ideas_for_v0.2.md  run_gdb.sh  test.cpp  test_spinlock.cpp  test_timer.cpp
Assets/: make_icons.py
Assets/icons/: icon.icns
Source/: AppAudioBuffer.h  BrowserComponent.h  ClipData.h  DeviceView.h  GlobalTransport.h  LockFreeQueue.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiPattern.h  Pattern.h  PatternEditor.h  ProjectManager.h  SessionView.h  SimplerComponent.h  SimplerProcessor.h  TrackCommand.h
Source/ControlSurface/: ApcMiniDriver.cpp  ApcMiniDriver.h  ClipStateObserver.h  ControlElement.h  ControlSurface.h  ControlSurfaceManager.cpp  ControlSurfaceManager.h  MixerComponent.cpp  MixerComponent.h  SessionComponent.cpp  SessionComponent.h
Source/Core/: AppAudioBuffer.h  AudioClipPlayer.cpp  AudioClipPlayer.h  ClipData.h  CompPlayer.cpp  CompPlayer.h  GlobalTransport.h  Main.cpp  MainComponent.cpp  MainComponent.h  MpeZoneManager.h  TrackCommand.h  UndoActions.h
Source/Effects/: BespokeEffectEditors.h  BuiltInEffects.cpp  BuiltInEffects.h  EffectFactory.h  EffectProcessor.h
Source/Instruments/: AudioInputComponent.h  AudioInputProcessor.cpp  AudioInputProcessor.h  DrumMachineProcessor.cpp  DrumMachineProcessor.h  DrumRackComponent.h  DrumRackProcessor.cpp  DrumRackProcessor.h  FMSynthComponent.h  FMSynthProcessor.cpp  FMSynthProcessor.h  Instrument.h  InstrumentFactory.h  KarplusStrongComponent.h  KarplusStrongProcessor.cpp  KarplusStrongProcessor.h  OscComponent.h  OscProcessor.cpp  OscProcessor.h  PluginInstrumentAdapter.cpp  PluginInstrumentAdapter.h  SimplerComponent.h  SimplerProcessor.cpp  SimplerProcessor.h  WavetableSynthComponent.h  WavetableSynthProcessor.cpp  WavetableSynthProcessor.h
Source/Sequencing/: AutomationEditor.h  EuclideanPattern.h  MidiPattern.h  Pattern.h  PatternEditor.h  PatternPool.h  PianoRollEditor.h
Source/UI/: ArrangementView.h  BrowserComponent.h  DeviceView.h  LiBeLookAndFeel.h  SessionView.h  TopBarComponent.h
Tests/: test_main.cpp
Tests/ControlSurface/: test_session_and_csm.cpp
Tests/DataModel/: test_clip_data_and_persistence.cpp
Tests/Instruments/: test_compressor_and_delay.cpp  test_fm_algorithms.cpp
Tests/LockFreeQueue/: test_app_audio_buffer.cpp  test_lockfree_queue.cpp  test_pdc_delay_line.cpp
Tests/Sequencing/: test_euclidean_pattern.cpp  test_global_transport.cpp
website/: Dockerfile  compose.yaml  env.example  nginx.conf
